# SecretSnailsContracts

./: .gitignore  Cargo.toml  Makefile  README.md  secretdevConfig.toml
contracts/secret-snails-minter/: Cargo.toml
contracts/secret-snails-minter/src/: contract.rs  msg.rs  state.rs
contracts/secret-snails-nft/: Cargo.toml
contracts/secret-snails-nft/examples/: schema.rs
scripts/localdev/: snip20_reference_impl.wasm
