[package]
name = "secret-snails-minter"
version = "0.1.0"
authors = ["FSoares <fsoares.developer@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
#debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
globals = { path = "../../packages/globals", version = "0.1.0" }
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret_toolkit  = { version = "0.2.0", package = "secret-toolkit"  }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
rand_chacha = "0.2.2"
rand_core = { version =  "0.5.1", default-features = false }
sha2 = "0.9.1"
rand = "0.7.3"
base64 = "0.12.3"